# Marekto

./: .dockerignore  .env.example  .gitignore  .warpfix.yaml  AGENTS.md  Dockerfile  FLOW.md  MVP.md  README.md  docker-compose.yml  instrumentation.ts  next.config.ts  package-lock.json  package.json
db/: README.md
docker/: env.example
scripts/: Marekto.postman_collection.json  README.md  apply-schema.mjs  run-e2e-smoke.mjs  run-integration-tests.mjs  validate-postman.mjs
services/data-intelligence/: .dockerignore  Dockerfile  pyproject.toml
services/data-intelligence/app/: __init__.py  config.py  main.py  security.py
services/data-intelligence/app/schemas/: __init__.py  analytics.py  contacts.py  health.py  scoring.py
services/data-intelligence/app/services/: __init__.py  analytics.py  normalization.py  scoring.py
services/data-intelligence/tests/: test_analytics.py  test_normalization.py  test_scoring.py
src/: proxy.ts
tests/: admin-audit.test.mjs  admin-auth.test.mjs  admin-billing-plans.test.mjs  admin-console.test.mjs  admin-health.test.mjs  ai-cache.test.mjs  ai-prompts.test.mjs  auth-otp.test.mjs  auth-response.test.mjs  auth.test.mjs  billing-routes.test.mjs  billing-sepay-provider.test.mjs  billing-sepay.test.mjs  campaign-ai-context.test.mjs  campaign-builder-route.test.mjs  campaign-builder.test.mjs  campaign-filters.test.mjs  campaign-status.test.mjs  campaigns-route.test.mjs  contact-intelligence.test.mjs  contacts-route.test.mjs  cron-auth.test.mjs  dashboard.test.mjs  data-intelligence-client.test.mjs  email-log-display.test.mjs  (+23 more)
(+190 files in other folders)
